syntax = "proto3";

option go_package = "genproto/user_service";

package user_service;

service SellerService {
    rpc Create(CreateSeller) returns (Seller) {}
    rpc GetByID(SellerPrimaryKey) returns (Seller) {}
    rpc GetList(GetListSellerRequest) returns (GetListSellerResponse) {}
    rpc Update(UpdateSeller) returns (Seller) {}
    rpc Delete(SellerPrimaryKey) returns (Empty2) {}
}

message Empty2 {}

message SellerPrimaryKey {
    string id = 1;
}

message CreateSeller {
    string phone = 1;
    string email = 2;
    string name = 3;
    string shop_id = 4;
}

message Seller {
    string id = 1;
    string phone = 2;
    string email = 3;
    string name = 4;
    string shop_id = 5;
    string created_at = 6;
    string updated_at = 7;
    int64 deleted_at = 8;
}

message UpdateSeller {
    string id = 1;
    string phone = 2;
    string email = 3;
    string name = 4;
    string shop_id = 5;
}

message GetSeller {
    string id = 1;
    string phone = 2;
    string email = 3;
    string name = 4;
    string shop_id = 5;
    string created_at = 6;
    string updated_at = 7;
    int64 deleted_at = 8;
}

message GetListSellerRequest {
    uint64 page = 1;
    uint64 limit = 2;
    string search = 3;
}

message GetListSellerResponse {
    int64 count = 1;
    repeated Seller sellers = 2;
}
